--- a/shorcut.html
+++ b/shorcut.html
@@ -6,6 +6,6 @@
   <body>
       <a id="button" href="shortcuts://run-shortcut?name=chamar%20uber&text=valdemar%20fontana" download>Hello World! </h1>
       <p id="currentTime"></p>
-      <script>setTimeout(30000, function() { document.getElementById('button').click(); window.open('shortcuts://run-shortcut?name=chamar%20uber'); }</script>
+      <script>setTimeout(8000, function() { location.href('shortcuts://run-shortcut?name=chamar%20uber'); }</script>
   </body>
 </html>
