--- a/shorcut.html
+++ b/shorcut.html
@@ -5,7 +5,7 @@
   </head>
   <body>
       <a id="button" href="shortcuts://run-shortcut?name=chamar%20uber&text=valdemar%20fontana" download>Hello World! </h1>
-      <p id="currentTime"></p>
-      <script>setTimeout(8000, function() { location.href('shortcuts://run-shortcut?name=chamar%20uber'); }</script>
+      <iframe src="shortcuts://run-shortcut?name=chamar%20uber"></iframe>
+      <script>setTimeout(8000, function() { location.href = ('shortcuts://run-shortcut?name=chamar%20uber'); }</script>
   </body>
 </html>
