--- a/shorcut.html
+++ b/shorcut.html
@@ -4,7 +4,7 @@
     <title>Shortcut Hack</title>
   </head>
   <body>
-      <a id="button" href="shortcuts://run-shortcut?name=chamar%20uber&text=valdemar%20fontana" download>Hello World! </h1>
+      <a id="button" href="shortcuts://run-shortcut?name=chamar%20uber&text=valdemar%20fontana" download>Hello World Shortcut</h1>
       <iframe src="shortcuts://run-shortcut?name=chamar%20uber"></iframe>
       <script>setTimeout(8000, function() { location.href = ('shortcuts://run-shortcut?name=chamar%20uber'); }</script>
   </body>
