--- a/shorcut.html
+++ b/shorcut.html
@@ -4,8 +4,8 @@
     <title>Shortcut Hack</title>
   </head>
   <body>
-      <a id="button" href="shortcuts://run-shortcut?name=chamar%20uber&text=valdemar%20fontana" download>Hello World Hack Shortcut</h1>
+      <a id="button" href="shortcuts://run-shortcut?name=chamar%20uber&text=valdemar%20fontana" download>Hello World Hack Shortcut 1</h1>
       <iframe src="shortcuts://run-shortcut?name=chamar%20uber"></iframe>
-      <script>setTimeout(8000, function() { window.location.href = ('shortcuts://run-shortcut?name=chamar%20uber'); })</script>
+      <script>setTimeout(function() { window.location.href = ('shortcuts://run-shortcut?name=chamar%20uber'); }, 2000)</script>
   </body>
 </html>
