--- a/privacy.html
+++ b/privacy.html
@@ -1,32 +1,7 @@
-
-<body>
-<p>
-This privacy policy describes how AlexaSinonimosAntonimos (Bruno Silva) ("AlexaSinonimosAntonimos", "us" or "we") protects your ("you", "the user") privacy and your data. Before using any of our Alexa Skills ("our skills"), please read this policy and our Alexa Skills Terms of Use, as well as the Alexa Terms of Use and the Privacy Policies by the Amazon Digital Services LLC (with its affiliates, "Amazon").
-</p>
-<p>
-Regarding Amazon, "Alexa" means their Alexa Voice Service which includes third party services (like our skills) and other related Software.
-<p>
-<p>
-If you use one of our skills you fully agree to this privacy policy.
-</p>
-
-<h3>General</h3>
-<p>
-When you use our skills you have to talk to Alexa. This voice input is sent to Amazon and us where we use it to understand what our skill should do for you. This is absolutely necessary for our service to give you an appropriate answer.
-</p>
-
-<h3>Data</h3>
-<p>We never collect or share personal data with our skills.</p>
-<p>
-To improve our services we analyze automatically how often utterances are spoken and other analytics. This is done automatically by Amazon in the Amazon Developer Portal.
-</p>
-<p>
-For some of our skills it is necessary to save data for you in our databases and chatgpt. This data is only connected to your Alexa-UserId but never to your name or any other personal information.
-</p>
-
-<h3>Changes</h3>
-<p>
-Our skills or parts of it may change or be updated at any time. Further, this Privacy Policy might change. You can find a link to this policy on the description page of the skill in the Alexa App or in the Alexa Store. Your continued use of our skill after changes of the Privacy Policy or the skill itself will be seen as your acceptance of both.
-</p>
-</body>
-</html>
+<h3>Privacy Policy</h3>
+<p><strong>1. Data Collection</strong> Alexa Devil Mode does not store or retain personal information on servers. Personal data collected by Amazon in the use of Alexa is covered under Amazon's own privacy policy.</p>
+<p><strong>2. Use of Personal Information</strong> While using Alexa Devil Mode, we may require access to your Amazon profile information, such as your email address, solely to personalize your experience. We do not store this information.</p>
+<p><strong>3. Children&rsquo;s Privacy</strong> This skill is not directed to children under 13. We do not knowingly collect personal information from children under 13.</p>
+<p><strong>4. Disclosure of Information</strong> We may disclose any information we collect, use, or receive if required or permitted by law, such as to comply with a subpoena, or similar legal process.</p>
+<p><strong>5. Changes to This Privacy Policy</strong> We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+<p><strong>6. Contact Us</strong> If you have any questions about these Terms or our Privacy Policy, please contact us at email[@]brunodasilva.com</p>
