--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,14 @@
-<h3>Privacy Policy</h3>
-<p><strong>1. Data Collection</strong> Alexa Devil Mode does not store or retain personal information on servers. Personal data collected by Amazon in the use of Alexa is covered under Amazon's own privacy policy.</p>
-<p><strong>2. Use of Personal Information</strong> While using Alexa Devil Mode, we may require access to your Amazon profile information, such as your email address, solely to personalize your experience. We do not store this information.</p>
-<p><strong>3. Children&rsquo;s Privacy</strong> This skill is not directed to children under 13. We do not knowingly collect personal information from children under 13.</p>
-<p><strong>4. Disclosure of Information</strong> We may disclose any information we collect, use, or receive if required or permitted by law, such as to comply with a subpoena, or similar legal process.</p>
-<p><strong>5. Changes to This Privacy Policy</strong> We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
-<p><strong>6. Contact Us</strong> If you have any questions about these Terms or our Privacy Policy, please contact us at email[@]brunodasilva.com</p>
+<h3>Privacy Policy for Alexa Devil Mode</h3>
+<p><strong>Introduction</strong><br />This Privacy Policy describes how the Alexa Devil Mode skill (referred to as "we", "us", or "our") collects, uses, and discloses your information when you use the skill through Amazon Alexa.</p>
+<p><strong>Information Collection</strong><br />When you use Alexa Devil Mode, we may access your basic profile information from your Amazon account, such as your name and email address. This information is accessed through Amazon&rsquo;s API and is used solely to personalize your interaction with our skill. We do not store this information on our servers.</p>
+<p><strong>Use of Information</strong><br />The information we access from your Amazon profile is used for the following purposes:</p>
+<ul>
+<li>To personalize your experience and respond to your queries effectively.</li>
+<li>To improve and optimize the functionality of our skill.</li>
+</ul>
+<p><strong>Children&rsquo;s Privacy</strong><br />Alexa Devil Mode is not directed at children under the age of 13. We do not knowingly engage in any collection or processing of data from children under the age of 13.</p>
+<p><strong>Data Sharing and Disclosure</strong><br />We do not share or sell any personal information we access through our skill with third parties for advertising or marketing purposes. However, we may disclose your information if required by law, such as to comply with a subpoena or other legal process.</p>
+<p><strong>Data Security</strong><br />We take reasonable measures to protect the security of the information accessed through our skill. However, no method of transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security.</p>
+<p></p><p></p>
+<p><strong>Changes to This Privacy Policy</strong><br />We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.</p>
+<p><strong>Contact Us</strong><br />If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at email[@]brunodasilva.com</p>
